# opengl_render_

./: .gitignore  CMakeLists.txt  README.md  render_en.h  shader.cpp
3rdpart/x64-windows/debug/lib/: glad.lib
3rdpart/x64-windows/lib/: glad.lib
3rdpart/x64-windows/lib/pkgconfig/: freetype2.pc
3rdpart/x64-windows/share/assimp/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/brotli/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/bzip2/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/egl-registry/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/freetype/: freetype-targets.cmake  vcpkg_abi_info.txt
3rdpart/x64-windows/share/glad/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/glfw3/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/glm/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/irrlicht/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/kubazip/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/libjpeg-turbo/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/libpng/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/minizip/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/opengl-registry/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/pkgconfig/: polyclipping.pc
3rdpart/x64-windows/share/poly2tri/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/polyclipping/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/rapidjson/: RapidJSONConfig.cmake  vcpkg_abi_info.txt
3rdpart/x64-windows/share/stb/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/utfcpp/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/vcpkg-cmake/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/vcpkg-cmake-config/: vcpkg_abi_info.txt
3rdpart/x64-windows/share/zlib/: vcpkg_abi_info.txt
deferredshading/: CMakeLists.txt  deferredshading.cpp  deferredshading.h
example/deferredshading/: CMakeLists.txt  deferredshading.cpp  deferredshading.h  main.cpp
example/ssao/: CMakeLists.txt  main.cpp  ssao.cpp  ssao.h
opengl_render_/: CMakeLists.txt  bufferobject.cpp  bufferobject.h  callbackfunction.cpp  callbackfunction.h  camera.cpp  camera.h  enum.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  ofapp.h  openg_texture.cpp  openg_texture.h  opengl_texture.cpp  opengl_texture.h  render_en.h  renderbase.cpp  renderbase.h  renderwidget.cpp  renderwidget.h  shader.cpp  texture.cpp  texture.h  vertexarraybufferobject.cpp  vertexarraybufferobject.h  widget_attribute.cpp  widget_attribute.h
opengl_render_ project/: README.md  camera.cpp  camera.h  mesh.cpp  model.cpp  render_en.h  renderbase.cpp  shader.cpp  shader.h  stb_image.cpp
opengl_render_/include/: bufferobject.h  camera.h  enum.h  mesh.h  model.h  ofapp.h  renderwidget.h  shader.h  texture.h  vertexarraybufferobject.h  widget_attribute.h
opengl_render_/shader/: triangle.frag  triangle.vert
resources/shader/: yuv_matrix.frag
resources/shader/DeferredShading/: drawscene.frag  drawscene.vert  gbuffer.frag  gbuffer.vert  renderlight.frag  renderlight.vert
resources/shader/load_model/: model_load.frag  model_load.vert
resources/shader/others/: blin_phong.frag  blin_phong.vert  trianglet.frag  trianglet.vert
resources/shader/ssao/: cal_ssao.frag  cal_ssao.vert  ssao_buler.frag  ssao_buler.vert  ssao_geomtry_pass.frag  ssao_geomtry_pass.vert  ssao_light_pass.frag  ssao_light_pass.vert
